feat(theme): global dark/light theme, profile redesign, games/weather/pm theme support
Frontend:
- Add AMOLED dark (#000000) and pure light (#ffffff) theme tokens in shared/theme/index.js
- ThemeContext: persist mode to localStorage, expose useT() and useThemeMode() hooks
- App.jsx: themed ErrorBoundary (class component reads localStorage), fix MUI buildMuiTheme bg/paper
- Home.js: remove hardcoded Hero gradient so theme toggle works seamlessly on scroll
- registration.js: fix T-not-defined in SectionLabel by consuming useT() inside the component
- Login.js: fix stale DARK_FIELD reference → use FIELD from getFieldSx(T)
- Profile.js: full redesign — avatar banner, InfoRow, ChangePasswordDialog, LoginHistoryDialog with UA parsing
- EditProfile.js: full redesign — remove createTheme override, use useT()/getFieldSx/getSelectMenuProps
- Games.jsx, PasswordManagement.js, weather.js: replace static T object with useT() hook
- TicTacToe.js, Snake.jsx, MemoryMatch.jsx, Game2048.jsx: same — remove static T, add useT(), fix hardcoded backgrounds and glow
- ApiServices.js: fix getUserDetail endpoint (/api/user/profile), add changePassword, getLoginHistory

Backend:
- UserController: add GET /api/user/login-history and PATCH /api/user/change-password endpoints
- LoginDataService/Impl: add getLoginHistory() returning last 5 sessions for current user

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>